--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 /*  Text shadow is as it says it gives a shadow. first px is for horizontel and second vertical for shadow */
 body h1 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-shadow: 2px 2px blueviolet;
 }
 
@@ -20,4 +20,16 @@ body p {
   padding: 10px;
   padding-right: 10px;
   margin: 25px;
+}
+
+nav {
+  text-decoration: none;
+  float: right;
+  margin: 0;
+  padding: 8px;
+  background-color: aquamarine;
+}
+
+nav a:hover {
+  color: rgb(39, 158, 179);
 }
