--- a/style.css
+++ b/style.css
@@ -23,18 +23,33 @@ body p {
 }
 
 nav {
+  display: flex;
+  gap: 20px;
+  text-align: center;
   text-decoration: none;
-  float: left;
   margin: 0;
   padding: 8px;
-  background-color: rgb(176, 80, 42);
+  background-color: rgb(108, 108, 108);
+  justify-content: center;
+  text-align: center;
 }
 
-/* Once you hover over the link it will turn into light blue */
+/* Once you hover over the link it will turn red  */
 nav a:hover {
   color: rgb(239, 4, 4);
 }
 
 nav a:active {
   color: green;
+}
+nav a:visited {
+  color: rgb(255, 242, 0);
+}
+
+body a:hover {
+  color: rgb(255, 127, 127);
+  transition: 0.5s ease;
+}
+
+.LinkedIn a:hover {
 }
