--- a/style.css
+++ b/style.css
@@ -1,10 +1,32 @@
 /* External CSS */
 
 /* element selector how we select within a Css file or style tag */
-body img {
+
+.Ernesto {
+  animation: AboutMe 5s ease;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+  animation-iteration-count: infinite;
+}
+
+.navbar {
+  animation: slideIn 5s;
+}
+
+.colors {
+  animation: Colors 10s ease;
+  animation-iteration-count: infinite;
+  border: 1px solid black;
+}
+
+/* body img {
   height: 400px;
   border-radius: 50%;
-}
+} */
 
 body {
   background-color: blanchedalmond;
@@ -48,4 +70,43 @@ nav a:active {
 }
 nav a:visited {
   color: rgb(255, 242, 0);
+}
+
+body a:hover {
+  color: rgb(255, 127, 127);
+  transition: 0.5s ease;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes AboutMe {
+  from {
+    background-image: url("images/ERNESTOMIRELES.jpg");
+  }
+
+  to {
+    background-image: url("images/thumbnail_IMG_3409.jpg");
+  }
+}
+
+@keyframes Colors {
+  0% {
+    background-color: palegreen;
+  }
+
+  50% {
+    background-color: forestgreen;
+  }
+
+  100% {
+    background-color: palegreen;
+  }
 }
