--- a/style2.css
+++ b/style2.css
@@ -53,9 +53,8 @@ body h1 {
   height: 400px;
   border: 1px solid black;
 }
-
-.navbar {
-  animation: slideIn 2s;
+zs .navbar {
+  animation: slideIn 1s;
 }
 
 nav a:hover {
